--- a/api/package.json
+++ b/api/package.json
@@ -10,10 +10,15 @@
         "test": "jasmine-node ."
     },
     "dependencies": {
+        "@azure/app-configuration": "^1.3.1",
         "@azure/cosmos": "^3.11.5",
-        "@azure/data-tables": "^12.1.0",
+        "@azure/data-tables": "^13.1.0",
+        "@azure/identity": "^2.0.4",
+        "@azure/keyvault-secrets": "^4.4.0",
         "applicationinsights": "^2.1.3",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "install": "^0.13.0",
+        "npm": "^8.8.0"
     },
     "devDependencies": {
         "jasmine-node": "^3.0.0",
