--- a/functions/package.json
+++ b/functions/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "durable-functions": "^1.5.1",
     "@azure/cosmos": "^3.11.5",
-    "@azure/data-tables": "next"
-  },
-  "devDependencies": {}
+    "@azure/data-tables": "^13.1.1",
+    "@azure/storage-blob": "^12.9.0",
+    "durable-functions": "^1.5.1"
+  }
 }
