--- a/functions/package.json
+++ b/functions/package.json
@@ -7,8 +7,11 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/app-configuration": "^1.3.1",
     "@azure/cosmos": "^3.11.5",
     "@azure/data-tables": "^13.1.1",
+    "@azure/identity": "^2.0.4",
+    "@azure/keyvault-secrets": "^4.4.0",
     "@azure/storage-blob": "^12.9.0",
     "durable-functions": "^1.5.1"
   }
